# se-for-sci-example-2

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/se_for_sci_example_2/: __init__.py
tests/: test_simple.py
