[project]
name = "se-for-sci-example-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henry Schreiner", email = "henryschreineriii@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
se-for-sci-example-2 = "se_for_sci_example_2:main"

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"
